Set up much richer Jenkinsfile support that publishes multiplatform binaries. (#274)
* Updated Jenkinsfile breaking apart build into different steps.

* Fixed silly mistake in Jenkinsfile format.

* Updated Jenkinsfile breaking up unit and integration tests, also made the releasebuild script more robust.

* Added output argument for gendepgraph.sh.

* chmod +x build/releasebuild.sh

* jenkins pls build

* Fixed the gitignore file ignoring things we didn't want it to.

* If there's a problem running integration tests then mark the build as unstable.

* Revert "If there's a problem running integration tests then mark the build as unstable."

This reverts commit 506645c6928f84fac2cd3397ae4e05d5f9296bbc.

* Some more Jenkinsfile tweaks to hopefully make failing tests only be "unstable".

* Fixed missing steps block.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 lit
 lit-af
+!cmd/lit-af
 cmd/lit-af/lit-af
-cmd/glit/glit
+
 headers.bin
 ln.db
 testkey.hex
@@ -13,11 +14,11 @@ webui/dist
 webui/build
 *.pyc
 
-#Editor temp files
+# Editor temp files
 \#*
 .\#*
 
-#Windows Specific
+# Windows Specific
 *.exe
 
 ### Vim ###
